# ms-pandoc

./: Dockerfile  buf.gen.yaml  docker-compose.yaml  pyproject.toml
cmd/ms-pandoc/: main.py
internal/app/: app.py
internal/config/: config.py
internal/logger/: logger.py
internal/services/: pandoc.py  service.py
internal/transport/: __init__.py  grpc.py  interceptors.py
proto/: pandoc.proto  service.proto
